Remove center from CSS to fix moving issue on mobile devices

--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -7,7 +7,7 @@ body {
 }
 
 body::after {
-	background: url("/assets/img/cosmic.png") no-repeat center bottom fixed;
+	background: url("/assets/img/cosmic.png") no-repeat bottom fixed;
 	background-size: cover;
 	opacity: 0.2;
 	content: "";
